--- a/index.html
+++ b/index.html
@@ -20,30 +20,43 @@
 
 <p id="msg"></p>
 
+<!-- SUPABASE -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 <script>
-const supabase = supabaseJs.createClient(
-  "https://otehkbvjoxxdikfrlldj.supabase.co",
-  "sb_publishable_M2pH2HrqRmYEXxgGAnMdRg_Y_7gupVv"
-);
+  // 👉 conexión a Supabase
+  const supabase = supabaseJs.createClient(
+    "https://otehkbvjoxxdikfrlldj.supabase.co",
+    "sb_publishable_M2pH2HrqRmYEXxgGAnMdRg_Y_7gupVv"
+  );
 
-async function registrar() {
-  const email = document.getElementById("reg-email").value;
-  const pass = document.getElementById("reg-pass").value;
+  // 👉 REGISTRO
+  window.registrar = async function () {
+    const email = document.getElementById("reg-email").value;
+    const pass = document.getElementById("reg-pass").value;
 
-  const { error } = await supabase.auth.signUp({ email, password: pass });
-  document.getElementById("msg").innerText =
-    error ? error.message : "Registro exitoso";
-}
+    const { error } = await supabase.auth.signUp({
+      email: email,
+      password: pass
+    });
 
-async function login() {
-  const email = document.getElementById("log-email").value;
-  const pass = document.getElementById("log-pass").value;
+    document.getElementById("msg").innerText =
+      error ? error.message : "Registro exitoso (revisá el mail)";
+  };
 
-  const { error } = await supabase.auth.signInWithPassword({ email, password: pass });
-  document.getElementById("msg").innerText =
-    error ? error.message : "Login correcto";
-}
+  // 👉 LOGIN
+  window.login = async function () {
+    const email = document.getElementById("log-email").value;
+    const pass = document.getElementById("log-pass").value;
+
+    const { error } = await supabase.auth.signInWithPassword({
+      email: email,
+      password: pass
+    });
+
+    document.getElementById("msg").innerText =
+      error ? error.message : "Login correcto";
+  };
 </script>
 
 </body>
