--- a/index.html
+++ b/index.html
@@ -3,60 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <title>Ingreso al Sistema</title>
+
+  <!-- Supabase -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
 
 <h2>Registro</h2>
 <input id="reg-email" placeholder="Email">
 <input id="reg-pass" type="password" placeholder="Contraseña">
-<button onclick="registrar()">Registrarse</button>
+<button id="btn-registrar">Registrarse</button>
 
 <hr>
 
 <h2>Login</h2>
 <input id="log-email" placeholder="Email">
 <input id="log-pass" type="password" placeholder="Contraseña">
-<button onclick="login()">Ingresar</button>
+<button id="btn-login">Ingresar</button>
 
 <p id="msg"></p>
 
-<!-- SUPABASE -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
 <script>
-  // 👉 conexión a Supabase
+  // Conexión Supabase
   const supabase = supabaseJs.createClient(
     "https://otehkbvjoxxdikfrlldj.supabase.co",
     "sb_publishable_M2pH2HrqRmYEXxgGAnMdRg_Y_7gupVv"
   );
 
-  // 👉 REGISTRO
-  window.registrar = async function () {
-    const email = document.getElementById("reg-email").value;
-    const pass = document.getElementById("reg-pass").value;
+  // Esperar a que cargue TODO el DOM
+  document.addEventListener("DOMContentLoaded", () => {
 
-    const { error } = await supabase.auth.signUp({
-      email: email,
-      password: pass
+    document.getElementById("btn-registrar").addEventListener("click", async () => {
+      const email = document.getElementById("reg-email").value;
+      const pass = document.getElementById("reg-pass").value;
+
+      const { error } = await supabase.auth.signUp({
+        email: email,
+        password: pass
+      });
+
+      document.getElementById("msg").innerText =
+        error ? error.message : "Registro exitoso (revisá el mail)";
     });
 
-    document.getElementById("msg").innerText =
-      error ? error.message : "Registro exitoso (revisá el mail)";
-  };
+    document.getElementById("btn-login").addEventListener("click", async () => {
+      const email = document.getElementById("log-email").value;
+      const pass = document.getElementById("log-pass").value;
 
-  // 👉 LOGIN
-  window.login = async function () {
-    const email = document.getElementById("log-email").value;
-    const pass = document.getElementById("log-pass").value;
+      const { error } = await supabase.auth.signInWithPassword({
+        email: email,
+        password: pass
+      });
 
-    const { error } = await supabase.auth.signInWithPassword({
-      email: email,
-      password: pass
+      document.getElementById("msg").innerText =
+        error ? error.message : "Login correcto";
     });
 
-    document.getElementById("msg").innerText =
-      error ? error.message : "Login correcto";
-  };
+  });
 </script>
 
 </body>
