--- a/index.html
+++ b/index.html
@@ -9,53 +9,52 @@
 <h2>Registro</h2>
 <input id="reg-email" placeholder="Email">
 <input id="reg-pass" type="password" placeholder="Contraseña">
-<button id="btn-registrar">Registrarse</button>
+<button onclick="registrar()">Registrarse</button>
 
 <hr>
 
 <h2>Login</h2>
 <input id="log-email" placeholder="Email">
 <input id="log-pass" type="password" placeholder="Contraseña">
-<button id="btn-login">Ingresar</button>
+<button onclick="login()">Ingresar</button>
 
 <p id="msg"></p>
 
+<!-- CARGA SUPABASE -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <script>
-  // 👇 ESTA VARIABLE SE DECLARA UNA SOLA VEZ
-  const supabase = supabaseJs.createClient(
-    "https://otehkbvjoxxdikfrlldj.supabase.co",
-    "sb_publishable_M2pH2HrqRmYEXxgGAnMdRg_Y_7gupVv"
-  );
+/* NO redeclaramos const supabase */
+window.supabase = supabaseJs.createClient(
+  "https://otehkbvjoxxdikfrlldj.supabase.co",
+  "sb_publishable_M2pH2HrqRmYEXxgGAnMdRg_Y_7gupVv"
+);
 
-  // REGISTRO
-  document.getElementById("btn-registrar").addEventListener("click", async () => {
-    const email = document.getElementById("reg-email").value;
-    const pass = document.getElementById("reg-pass").value;
+async function registrar() {
+  const email = document.getElementById("reg-email").value;
+  const pass = document.getElementById("reg-pass").value;
 
-    const { error } = await supabase.auth.signUp({
-      email,
-      password: pass
-    });
-
-    document.getElementById("msg").innerText =
-      error ? error.message : "Registro exitoso";
+  const { error } = await window.supabase.auth.signUp({
+    email,
+    password: pass
   });
 
-  // LOGIN
-  document.getElementById("btn-login").addEventListener("click", async () => {
-    const email = document.getElementById("log-email").value;
-    const pass = document.getElementById("log-pass").value;
+  document.getElementById("msg").innerText =
+    error ? error.message : "Registro exitoso";
+}
 
-    const { error } = await supabase.auth.signInWithPassword({
-      email,
-      password: pass
-    });
+async function login() {
+  const email = document.getElementById("log-email").value;
+  const pass = document.getElementById("log-pass").value;
 
-    document.getElementById("msg").innerText =
-      error ? error.message : "Login correcto";
+  const { error } = await window.supabase.auth.signInWithPassword({
+    email,
+    password: pass
   });
+
+  document.getElementById("msg").innerText =
+    error ? error.message : "Login correcto";
+}
 </script>
 
 </body>
